--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,11 +73,11 @@ jobs:
           cd build
 
           cmake -D BUILD_DX12=OFF -D BUILD_EXAMPLES=OFF ..
-          cmake --build . --config Release
+          cmake --build . --config Debug
 
           dest="dist-native/${{ matrix.name }}/x86_64"
           mkdir -p "$dest"
-          cp -v src/cpp/Release/*.${{ matrix.libExt }} "$dest"||cp -v src/cpp/*.${{ matrix.libExt }} "$dest"
+          cp -v src/cpp/Debug/*.* "$dest"||cp -v src/cpp/*.* "$dest"
 
       - name: LDD to debug
         if: matrix.os == 'ubuntu-latest'
